--- a/vignettes/vignette_aspect_importance_fifa.Rmd
+++ b/vignettes/vignette_aspect_importance_fifa.Rmd
@@ -49,16 +49,15 @@ head(fifa[,c(1:6)])
 
 # Build models for predicting players value
 
-For the further analysis, we prepare 4 models: 
+For the further analysis, we prepare 3 models: 
 
 * random forest,
 * tuned random forest,
-* gradient boosting machine,
-* linear model with spline transformations.
+* gradient boosting machine.
+
 
 ```{r}
 library("ranger")
-library("rms")
 library("gbm")
 
 fifa_rf <- ranger(value_eur~., data = fifa)
@@ -69,26 +68,6 @@ fifa_rf_mod <- ranger(value_eur~., data = fifa,
 fifa_gbm <- gbm(value_eur~., data = fifa, n.trees = 250,
                      interaction.depth = 4, distribution = "gaussian")
 
-fifa_ols <- ols(value_eur ~ rcs(age) + rcs(weight_kg) + rcs(height_cm) + 
-                  rcs(attacking_crossing) + rcs(attacking_finishing) +
-                  rcs(attacking_heading_accuracy) + 
-                  rcs(attacking_short_passing) + rcs(attacking_volleys) +
-                  rcs(skill_dribbling) + rcs(skill_curve) +
-                  rcs(skill_fk_accuracy) + rcs(skill_long_passing) +
-                  rcs(skill_ball_control) + rcs(movement_acceleration) +
-                  rcs(movement_sprint_speed) + rcs(movement_agility) +
-                  rcs(movement_reactions) + rcs(movement_balance) +
-                  rcs(power_shot_power) + rcs(power_jumping) +
-                  rcs(power_stamina) + rcs(power_strength) + 
-                  rcs(power_long_shots) + rcs(mentality_aggression) +
-                  rcs(mentality_interceptions) + rcs(mentality_positioning) +
-                  rcs(mentality_vision) + rcs(mentality_penalties) +
-                  rcs(mentality_composure) + rcs(defending_marking) +
-                  rcs(defending_standing_tackle) + 
-                  rcs(defending_sliding_tackle) + rcs(goalkeeping_diving) +
-                  rcs(goalkeeping_handling) + rcs(goalkeeping_kicking) +
-                  rcs(goalkeeping_positioning) + rcs(goalkeeping_reflexes), 
-                data = fifa)
 ```
 
 # Build explainers 
@@ -118,12 +97,6 @@ fifa_gbm_exp <- DALEX::explain(fifa_gbm,
                                    predict(m, x, n.trees = 250),
                                label = "GBM",
                                verbose = FALSE)
-                                    
-fifa_rms_exp <- DALEX::explain(fifa_ols,
-                              data = fifa[,-1], 
-                              y = fifa$value_eur,
-                              label = "RMS",
-                              verbose = FALSE)
 
 ```
 
@@ -139,15 +112,11 @@ fifa_rf_m_tri <- model_triplot(fifa_rf_m_exp, B = 1, N = 5000)
 
 fifa_gbm_tri <- model_triplot(fifa_gbm_exp, B = 1, N = 5000)
 
-fifa_rms_tri <- model_triplot(fifa_rms_exp, B = 1, N = 5000)
-
 plot(fifa_rf_tri, show_model_label = TRUE, margin_mid = 0)
 
 plot(fifa_rf_m_tri, show_model_label = TRUE, margin_mid = 0)
 
 plot(fifa_gbm_tri, show_model_label = TRUE, margin_mid = 0)
-
-plot(fifa_rms_tri, show_model_label = TRUE, margin_mid = 0)
 
 ```
 
@@ -201,28 +170,16 @@ aspects_top_player_gbm <- predict_aspects(fifa_gbm_exp,
                 new_observation = top_player, 
                 variable_groups = fifa_vg)
 
-aspects_top_player_rms <- predict_aspects(fifa_rms_exp, 
-                new_observation = top_player, 
-                variable_groups = fifa_vg)
-
 plot(aspects_top_player_rf,
       aspects_top_player_rf_m,
-      aspects_top_player_gbm,
-      aspects_top_player_rms)
-
-
+      aspects_top_player_gbm)
 
 ```
 
 ```{r}
 fifa_rf_m_tri_player <- predict_triplot(fifa_rf_m_exp, top_player)
 
-fifa_rms_tri_player <- predict_triplot(fifa_rms_exp, top_player)
-
 plot(fifa_rf_m_tri_player, show_model_label = TRUE, margin_mid = 0.2)
-
-plot(fifa_rms_tri_player, show_model_label = TRUE, margin_mid = 0.2)
-
 
 ```
 
@@ -247,12 +204,6 @@ aspects_gk_rf_m <- predict_aspects(fifa_rf_m_exp,
 aspects_gk_gbm <- predict_aspects(fifa_gbm_exp, 
                 new_observation = player_gk, 
                 variable_groups = fifa_vg)
-
-aspects_gk_rms <- predict_aspects(fifa_rms_exp, 
-                new_observation = player_gk, 
-                variable_groups = fifa_vg)
-
-plot(aspects_gk_rms)
 
 
 ```
